--- a/index.html
+++ b/index.html
@@ -1,19 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Hello World!</title>
-<link rel="stylesheet" href="bluestyle.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Netflix Login</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<h1>Hello world!</h1>
-<div><img src="img_hello_world.jpg" alt="Hello World from Space"
-style="width:100%;max-width:960px"></div>
-<p>This is the first file in my new Git Repo.</p>
-<p>This line is here to show how merging works.</p>
-<p>A new line in our file!</p>
-<div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
-<li></li>
-
+    <div class="login-container">
+        <div class="logo">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg" alt="Netflix Logo">
+        </div>
+        <form class="login-form">
+            <h1>Sign In</h1>
+            <div class="input-group">
+                <input type="email" placeholder="Email or phone number" required>
+            </div>
+            <div class="input-group">
+                <input type="password" placeholder="Password" required>
+            </div>
+            <button type="submit" class="btn-login">Sign In</button>
+            <div class="help-links">
+                <div class="remember-me">
+                    <input type="checkbox" id="remember">
+                    <label for="remember">Remember me</label>
+                </div>
+                <a href="#">Need help?</a>
+            </div>
+        </form>
+        <div class="sign-up">
+            <p>New to Netflix? <a href="#">Sign up now</a></p>
+        </div>
+        <div class="terms">
+            <p>This page is protected by Google reCAPTCHA to ensure you're not a bot. <a href="#">Learn more.</a></p>
+        </div>
+    </div>
+    <div>I am avinash ganta</div>
 </body>
 </html>
+
